# VPS

./: .gitignore  README.md  TODOLIST.md
assets/: negative_samples_table.md  positive_samples_table.md
docs/: AWESOME_VPS.md  DATA_DESCRIPTION.md  DATA_PREPARATION.md  INFO_NEGATIVE_CASES.md  INFO_POSITIVE_CASES.md  RELEASE_NOTES.md
eval/: MyEval.py  README.md  eval.sh  metrics.py  vps_evaluator.py
eval/eval-result/2015-MICCAI-UNet/: TestEasyDataset_eval.txt  TestHardDataset_eval.txt
eval/eval-result/2018-TMI-UNet++/: TestEasyDataset_eval.txt  TestHardDataset_eval.txt
eval/eval-result/2019-TPAMI-COSNet/: CVC-ColonDB-300_eval.txt  TestEasyDataset_eval.txt  TestHardDataset_eval.txt
eval/eval-result/2020-AAAI-PCSA/: TestEasyDataset_eval.txt  TestHardDataset_eval.txt
eval/eval-result/2020-MICCAI-23DCNN/: TestEasyDataset_eval.txt  TestHardDataset_eval.txt
lib/PNS+/: MyTrain_Finetune_TMI_abl1.py  MyTrain_Finetune_TMI_abl11.py  MyTrain_Finetune_TMI_abl2.py  MyTrain_Finetune_TMI_abl3.py  MyTrain_Finetune_TMI_abl4.py  MyTrain_Finetune_TMI_abl5.py  config.py
lib/PNS+/module/PNS/PNS_Module/: CMakeLists.txt
lib/bak/: MyTrain_Finetune_TMI_abl9.py
lib/dataloader/: dataloader.py  preprocess.py
lib/module/: PNSPlusModule.py  PNSPlusNetwork.py  PNS_Network_TMI_series.py  Res2Net_v1b.py
lib/utils/: utils.py
res/: .placeholder
scripts/: MyTest_TMI_Finetune.py  MyTrain_Finetune_TMI.py  MyTrain_Pretrain.py  config.py  eval_eff.py  my_test.py  my_train.py  script_eval.sh
snapshot/: .placeholder
utils/: download_and_reorganize.sh  reorganize.py  reorganize.sh
(+62 files in other folders)
